--- a/NuklearSharp.csproj
+++ b/NuklearSharp.csproj
@@ -10,6 +10,17 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x64' ">
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x64' ">
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+  </PropertyGroup>
+  <ItemGroup>
+    <Compile Remove="nuklear\**" />
+    <EmbeddedResource Remove="nuklear\**" />
+    <None Remove="nuklear\**" />
+  </ItemGroup>
   <ItemGroup>
     <PackageReference Include="NativeLibraryLoader" Version="1.0.4" />
   </ItemGroup>
